force-app/main/default/objects/PDX_Config__mdt/PDX_Config__mdt.object-meta.xml
<CustomObject>
    <label>PDX Config</label>
    <pluralLabel>PDX Config</pluralLabel>
</CustomObject>