force-app/main/default/objects/PDX_Config__mdt/fields/Facturas_List_Path__c.field-meta.xml
<CustomField>
    <fullName>Facturas_List_Path__c</fullName>
    <description>Ruta del servicio de listado de facturas (pendiente de confirmar con CAZ). Placeholder.</description>
    <label>Facturas List Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>