force-app/main/default/objects/PDX_Config__mdt/fields/Invoice_File_Path__c.field-meta.xml
<CustomField>
    <fullName>Invoice_File_Path__c</fullName>
    <description>Ruta del servicio de archivos de factura (PDF/XML Base64). Default /api/File/invoice.</description>
    <label>Invoice File Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>