force-app/main/default/objects/PDX_Config__mdt/fields/Mock_Mode__c.field-meta.xml
<CustomField>
    <fullName>Mock_Mode__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Si está activo, los servicios PDX devuelven datos mock (mientras el P0 de credenciales CAZ siga bloqueado).</description>
    <label>Mock Mode</label>
    <type>Checkbox</type>
</CustomField>